force-app/main/default/objects/SurveyTaker__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <formula>TEXT(Case__r.Reason)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Reason</label>
    <type>Text</type>
</CustomField>