force-app/main/default/objects/SurveyTaker__c/fields/Contact_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Org_Type__c</fullName>
    <description>Gets the Organization Type for the Contact</description>
    <formula>Text(Contact__r.Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Org Type</label>
    <type>Text</type>
</CustomField>