force-app/main/default/objects/SurveyTaker__c/fields/Negative_Response__c.field-meta.xml
<CustomField>
    <fullName>Negative_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negative Response</label>
    <type>Checkbox</type>
</CustomField>