force-app/main/default/objects/SurveyTaker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Follow_Up__c</columns>
    <columns>Contact__c</columns>
    <columns>Survey__c</columns>
    <columns>Contact_Org_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Org_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>